fix image alignment

--- a/mytimes/resources/css/style.css
+++ b/mytimes/resources/css/style.css
@@ -147,7 +147,7 @@ h2 {
 }
 
 .stories .text-content {
-  height: 250px;
+/*  height: 250px; */
 }
 
 .story {
